# witcher-sandbox-backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  docker-compose.yml  index.html  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: checks.yml
app/: .flake8
app/alchemy/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/alchemy/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20240108_1607.py  0004_auto_20240108_1732.py  0005_alter_decotion_img.py  0006_auto_20240110_1133.py  0007_auto_20240110_1134.py  0008_auto_20240110_1159.py  0009_auto_20240110_2117.py  0010_auto_20240110_2121.py  0011_remove_bomb_duration_sec.py  0012_bomb_duration_sec.py
app/alchemy/tests/: test_alchemy_api.py  test_api.py  test_models.py  utils.py
app/app/: settings.py  urls.py
app/core/: admin.py  managers.py  models.py  permissions.py  serializers.py  views.py
app/core/migrations/: 0001_initial.py  0002_alter_tier_color_hex.py  0003_auto_20240110_0003.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py  utils.py
app/docs/: index.md  installation.md
app/docs/stylesheets/: extra.css
app/items/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/items/admins/: alchemy_admin.py  general_admin.py
app/items/filters/: alchemy_filters.py  general_filters.py
app/items/tests/: utils.py  (+1 more)
app/users/: admin.py  managers.py  serializers.py  urls.py  views.py
installation/: index.html
search/: search_index.json
witcher_sandbox/: settings.py  urls.py  wsgi.py
witcher_sandbox/api/: permissions.py
witcher_sandbox/core/: apps.py
(+67 files in other folders)
